--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,78 @@
 body{
-	background-color: #9eafaf;
 	padding: 0px;
-    margin: 0px;
+	margin: 0px;
 }
 p, li, h2, h3{
 	font-family: 'Merriweather', serif;
 }
+div#footerBox{
+	position: relative;
+    top: 41px;
+}
+div#sideMenuContent{
+	position:fixed;
+	margin-top:10px;
+}
+a.sideMenuLink{
+	display:block;
+}
 .centeredText {
+	margin-top: 0px;
 	text-align:center;
 	font-family: 'Londrina Solid', cursive;
 }
 .flex-row{
 	background-color: #f9f9f9;
-	padding:0px 20px 0px 20px;
-	margin:0px 5px 0px 5px;
+	padding: 1px 20px 1px 20px;
+	margin: 0px 5px 0px 5px;
 }
 #layout{
 	display:flex;
+	position: relative;
+	/* margin-top: 20px; */
+	top: 41px;
+	z-index: 0;
 }
 nav#topMenu {
+    position: fixed;
+    width: calc(100vw - (100vw - 100%));
+    height: 20px;
     background-color: black;
     color: white;
-    margin: 5px;
+    margin: 0px 5px 5px 5px;
     padding: 10px;
+    z-index: 1;
+    /* top: -20px; */
 }
 li.horizontal {
     display: inline;
 }
 div#mainContent {
-    min-height: 95vh;
+    margin-bottom: 15%;
+    /* min-height: 95vh; */
 }
 div.sideMenu {
-    width: 350px;
+    width: 500px;
+}
+#bg{
+	position:fixed;
+	width: 100vw;
+	height: 100vh;
+	background-image:url(/background.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	z-index: -1;
+	padding-top: 5px;
+	margin-top: -5px;
+}
+#backgroundCredit{
+	background-color:black;
+	color:white;
+	text-align:center;
+}
+a.whiteLink{
+	color: white;
+    font-weight: bold;
+    text-decoration: none;
 }
