--- a/layoutTest.css
+++ b/layoutTest.css
@@ -14,8 +14,8 @@
 	:root{
 		--main-column-width:calc(100% - (var(--side-column-width)) - (var(--default-margin)*2) - var(--margin-adjustment) - 2*var(--default-border-size));
 	}
-	p, ol, li, div, h1, h2, h3{
-		font-size: calc(1rem*(16/9));
+	html{
+		font-size:178%
 	}
 }
 ol {
