--- a/layoutTest.css
+++ b/layoutTest.css
@@ -21,7 +21,10 @@
 	#logo{
         	height:48px;
     	}
-		a.sideMenuLink {
+}
+
+@media (anyhover:none){
+	a.sideMenuLink {
    		border-bottom: solid 1px black;
    		padding-top: 20px;
    		padding-bottom: 20px;
